--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
@@ -1,18 +1,13 @@
-<!-- bookshelf/templates/bookshelf/form_example.html -->
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Secure Form Example</title>
+    <title>Example Form</title>
 </head>
 <body>
-    <h2>Submit Form</h2>
-
+    <h1>Submit Book</h1>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-
         <button type="submit">Submit</button>
     </form>
 </body>
