--- a/django_blog/accounts/templates/accounts/profile.html
+++ b/django_blog/accounts/templates/accounts/profile.html
@@ -1,26 +1,20 @@
 {% extends "base.html" %}
-{% load static %}
 {% block content %}
-<h2>My Profile</h2>
+  <h2>Profile</h2>
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <fieldset>
+      <legend>User</legend>
+      {{ u_form.as_p }}
+    </fieldset>
+    <fieldset>
+      <legend>Profile</legend>
+      {{ p_form.as_p }}
+    </fieldset>
+    <button type="submit">Save changes</button>
+  </form>
 
-<form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <fieldset>
-    <legend>User info</legend>
-    {{ u_form.as_p }}
-  </fieldset>
-  <fieldset>
-    <legend>Profile</legend>
-    {{ p_form.as_p }}
-  </fieldset>
-  <button type="submit">Save changes</button>
-</form>
-
-{% if user.profile.profile_pic %}
-  <img src="{{ user.profile.profile_pic.url }}" alt="profile pic" style="max-width:150px;">
-{% endif %}
-
-{% for message in messages %}
-  <p>{{ message }}</p>
-{% endfor %}
+  {% if user.profile.profile_pic %}
+    <img src="{{ user.profile.profile_pic.url }}" alt="profile pic" style="max-width:150px;">
+  {% endif %}
 {% endblock %}
