--- a/django_blog/accounts/templates/home.html
+++ b/django_blog/accounts/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Welcome to the Blog</h1>
+  <h1>Welcome to the Django Blog</h1>
+  <p>This is the homepage.</p>
 {% endblock %}
