--- a/django_blog/accounts/templates/accounts/register.html
+++ b/django_blog/accounts/templates/accounts/register.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+
   <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
