--- a/django_blog/blog/templates/blog/register.html
+++ b/django_blog/blog/templates/blog/register.html
@@ -1,8 +1,5 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% block content %}
-{% load static %}
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
-
   <h2>Register</h2>
   <form method="post">
     {% csrf_token %}
