--- a/django_blog/blog/templates/blog/post_form.html
+++ b/django_blog/blog/templates/blog/post_form.html
@@ -1,9 +1,41 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% block content %}
-<h2>{% if object %}Edit Post{% else %}New Post{% endif %}</h2>
-<form method="post">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Save</button>
-</form>
+  <h1>{{ post.title }}</h1>
+  <p>{{ post.content }}</p>
+  <p>By {{ post.author }} on {{ post.created_at }}</p>
+
+  <hr>
+  <h3>Comments</h3>
+  {% if comments %}
+    <ul>
+      {% for comment in comments %}
+        <li>
+          <p>{{ comment.content|linebreaks }}</p>
+          <small>By {{ comment.author }} on {{ comment.created_at }}</small>
+          {% if user.is_authenticated and user == comment.author %}
+            &nbsp;|&nbsp;
+            <a href="{% url 'comment_update' post.pk comment.pk %}">Edit</a>
+            &nbsp;|&nbsp;
+            <a href="{% url 'comment_delete' post.pk comment.pk %}">Delete</a>
+          {% endif %}
+        </li>
+      {% endfor %}
+    </ul>
+  {% else %}
+    <p>No comments yet. Be the first to comment!</p>
+  {% endif %}
+
+  <hr>
+  {% if user.is_authenticated %}
+    <h4>Leave a comment</h4>
+    <form action="{% url 'comment_create' post.pk %}" method="post">
+      {% csrf_token %}
+      {{ comment_form.as_p }}
+      <button type="submit">Post comment</button>
+    </form>
+  {% else %}
+    <p><a href="{% url 'login' %}?next={{ request.path }}">Log in</a> to leave a comment.</p>
+  {% endif %}
+
+  <p><a href="{% url 'post_list' %}">Back to posts</a></p>
 {% endblock %}
