--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -5,5 +5,15 @@
   <h3><a href="{% url 'post-detail' post.pk %}">{{ post.title }}</a></h3>
   <p>{{ post.content|truncatewords:20 }}</p>
   <p>By {{ post.author }} on {{ post.created_at }}</p>
+
+  <!-- inside post detail or listing -->
+<p>Tags:
+  {% for tag in post.tags.all %}
+    <a href="{% url 'posts-by-tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+  {% empty %}
+    <span>No tags</span>
+  {% endfor %}
+</p>
+
 {% endfor %}
 {% endblock %}
